--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "react": "next",
     "react-dom": "next",
     "react-jsonschema-form": "1.0.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-test-renderer": "16.6.3",
+    "react-test-renderer": "16.6.3"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^13.1.0",
